Project structure and layout

--- a/src/component/Layout/Layout.scss
+++ b/src/component/Layout/Layout.scss
@@ -1,5 +1,5 @@
 .app-layout {
-    height: calc(100vh);
+    height: 100vh;
     padding-top: 64px;
     display: flex;
     flex-direction: column;
